// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Interface for a service that consumes notifications.
syntax = "proto2";

package forwarding;

import "proto/forwarding/forwarding_common.proto";
import "proto/forwarding/forwarding_port.proto";

option go_package = "github.com/openconfig/lemming/dataplane/proto/forwarding";

// Event enumerates different types of events that can be generated.
enum Event {
  PORT_EVENT = 1;
}

// EventDesc describes an event.
message EventDesc {
  optional Event event = 1;
  optional uint64 sequence_number =
      2;  // Monotonically increasing sequence number of event
  extensions 100 to max;
}
message Empty {}

// PortEventDesc describes a change on the indicated port.
message PortEventDesc {
  reserved 1, 3, 4;
  extend EventDesc {
    optional PortEventDesc extension = 101;
  }
  optional ContextId context = 2;
  optional PortId port_id = 5;
  optional LinkStateDesc link_event = 6;
}